--- a/Milestone 2/gaSalesMan.edit/plugin.properties
+++ b/Milestone 2/gaSalesMan.edit/plugin.properties
@@ -51,3 +51,6 @@ _UI_TourOptimizer_tourpopulations_feature = Tourpopulations
 _UI_TourPopulation_maps_feature = Maps
 _UI_Unknown_feature = Unspecified
 
+_UI_Chromosome_fitness_feature = Fitness
+_UI_IncompleteTour_model_feature = Model
+_UI_CompleteTour_model_feature = Model
